# smolvlm-realtime-webcam

./: PLAN.md  README.md  auto.html  config.yaml  index.html  screen.html  screen_larger.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: app.js  index.html  style.css
src-tauri/src/: config.rs  lib.rs  main.rs  model.rs  webcam.rs
