[package]
name = "vlm-realtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "vlm_realtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
image = "0.25"
log = "0.4"
env_logger = "0.11.8"

# Use Candle with compatible versions
candle-core = { version = "0.9.1" }
candle-nn = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
